# z1_ctrl_sys

./: .gitmodules
arm_controller/: CMakeLists.txt  package.xml
arm_controller/action/: Plan.action
arm_controller/include/arm_controller/: arm_api.h  arm_controller.h  arm_planner.h  geometry_utils.h  js_api.h  js_dev.h  kinematics.h  math_fn.h
arm_controller/launch/: arm_controller_node.launch
arm_controller/src/: arm_api.cpp  arm_controller.cpp  arm_planner.cpp  geometry_utils.cpp  js_api.cpp  kinematics.cpp  main.cpp
arm_controller/src/test/: CMakeLists.txt  test_back2home_server.cpp  test_check_pose_server.cpp  test_good_cmd_pose.cpp  test_moveit_planner.cpp  test_plan_server.cpp  test_z1_movej_arm.cpp
arm_controller_srvs/: CMakeLists.txt  package.xml
arm_controller_srvs/srv/: BackToHome.srv  CheckPoseInWorkspace.srv  Plan.srv
z1_description/: CMakeLists.txt
z1_description/config/: robot_control.yaml
z1_description/launch/: setting.rviz  z1.launch  z1_rviz.launch
z1_description/xacro/: robot.xacro  z1.urdf
z1_moveit_config/: .setup_assistant  package.xml
z1_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  z1_description.srdf
z1_moveit_config/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
